--- a/src/components/styles/styles.css
+++ b/src/components/styles/styles.css
@@ -73,17 +73,19 @@ img {
 
 .SearchForm-button {
   display: inline-block;
-  width: 48px;
+  width: 70px;
   height: 48px;
   border: 0;
-  background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');
+  /* background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');
   background-size: 40%;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center; */
+  text-align: center;
   opacity: 0.6;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
   outline: none;
+  margin-right: 30px;
 }
 
 .SearchForm-button:hover {
